--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,8 +17,6 @@
 
  <!-- JQuery and JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script type="text/javascript" src="../../server.js"></script>
-
 </head>
 <body>
     <div class="container">
@@ -28,13 +26,15 @@
             <h2><strong>About You</strong></h2>
             <h4> Name (required)</h4>
             <input type="text" id="name" class="form-control" required>
+            <br>
             <h4> Link to Photo Image (required)</h4>
             <input type="text" id="photo" class="form-control" required>
             <hr>
             <h3><strong>Question 1</strong></h3>
                 <div class="form-group">
-                    <label id="q1">Your mind is always bussing with unexplored ideas and plans.</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <label>Your mind is always bussing with unexplored ideas and plans.</label>
+                    <select class="form-control" id="q1">
+                        <option value></option>
                     <option value="1">1 (strongly disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -44,8 +44,9 @@
                 </div>
             <h3><strong>Question 2</strong></h3>
                 <div class="form-group">
-                    <label id="q2">Generally speaking, you rely more on your experience than your imagination.</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <label>Generally speaking, you rely more on your experience than your imagination.</label>
+                    <select class="form-control" id="q2">
+                        <option value></option>
                     <option value="1">1 (strongly disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -53,7 +54,132 @@
                     <option value="5">5( strongly agree)</option>
                     </select>
                 </div>
-            <button type="submit" it="submit" class="btn btn-primary">Submit</button>
+            <h3><strong>Question 3</strong></h3>
+                <div class="form-group">
+                    <label>You find it easy to stay relaxed and focused, even when there is some pressure.</label>
+                    <select class="form-control" id="q3">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 4</strong></h3>
+                <div class="form-group">
+                    <label>You rarely do something just out of sheer curiosity.</label>
+                    <select class="form-control" id="q4">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 5</strong></h3>
+                <div class="form-group">
+                    <label>People can rarely upset you.</label>
+                    <select class="form-control" id="q5">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 6</strong></h3>
+                <div class="form-group">
+                    <label>It is often difficult for you to relate to other people's feelings.</label>
+                    <select class="form-control" id="q6">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 7</strong></h3>
+                <div class="form-group">
+                    <label>In a discussion, truth should be more important than people’s sensitivities.</label>
+                    <select class="form-control" id="q7">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 8</strong></h3>
+                <div class="form-group">
+                    <label>You rarely get carried away by fantasies and ideas.</label>
+                    <select class="form-control" id="q8">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+            <h3><strong>Question 9</strong></h3>
+                <div class="form-group">
+                    <label>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</label>
+                    <select class="form-control" id="q9">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+                <h3><strong>Question 10</strong></h3>
+                <div class="form-group">
+                    <label>You feel more energetic after spending time with a group of people.</label>
+                    <select class="form-control" id="q10">
+                        <option value></option>
+                    <option value="1">1 (strongly disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5( strongly agree)</option>
+                    </select>
+                </div>
+                <button type="submit" it="submit" class="btn btn-primary">Submit</button>
     </div>
+    <p>API Friends List | GitHub Repo</p>
+
+    <script type="text/javascript">
+    $('#submit').on('click', function(event){
+        event.preventDefault();
+        var newFriend = {
+            name: $('#name').val().trim(),
+            photo: $('#photo').val().trim(),
+            scores: [
+                $('#q1').val(),
+                $('#q2').val(),
+                $('#q3').val(),
+                $('#q4').val(),
+                $('#q5').val(),
+                $('#q6').val(),
+                $('#q7').val(),
+                $('#q8').val(),
+                $('#q9').val(),
+                $('#q10').val()
+            ]
+        }
+        
+        $.post('/api/friends', newFriend).then( function(data){
+            console.log('survey.html', data);
+            alert("You have a friend")
+        });
+    });
+
+    </script>
 </body>
 </html>
