modified calculations, added more characters for Stranger Things theme

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -78,7 +78,7 @@
                     <option value="5">5( strongly agree)</option>
                     </select>
                 </div>
-            <!-- <h3><strong>Question 5</strong></h3>
+            <h3><strong>Question 5</strong></h3>
                 <div class="form-group">
                     <label>People can rarely upset you.</label>
                     <select class="form-control" id="q5">
@@ -149,7 +149,7 @@
                     <option value="4">4</option>
                     <option value="5">5 (strongly agree)</option>
                     </select>
-                </div> -->
+                </div>
                 <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </div>
     <p>API Friends List | GitHub Repo</p>
@@ -165,13 +165,13 @@
                 $('#q1').val(),
                 $('#q2').val(),
                 $('#q3').val(),
-                $('#q4').val()
-                // $('#q5').val(),
-                // $('#q6').val(),
-                // $('#q7').val(),
-                // $('#q8').val(),
-                // $('#q9').val(),
-                // $('#q10').val()
+                $('#q4').val(),
+                $('#q5').val(),
+                $('#q6').val(),
+                $('#q7').val(),
+                $('#q8').val(),
+                $('#q9').val(),
+                $('#q10').val()
             ]
         }
         
