--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -207,11 +207,11 @@
                 } 
             
                     $.post('api/friends', newFriend, function(data) {
+                        console.log(data)
                         $("#friendName").text(data.name);
                         $("#friendPic").attr("src", data.photo);
                         alert("testing")
                         $("#myModal").modal("toggle");
-                        console.log(data.photo)
           
                         // console.log("from page: " + data.name)
                         // console.log("time" + bestFriend + bestFriendName)
