setting up to push to Heroku

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <div class="text-center">
-          <h1 class="display-4" id="title"><i class="fas fa-dungeon"></i> Friend Finder <i class="fas fa-dragon"></i></h1>
+          <h1 class="display-4 title"><i class="fas fa-dungeon"></i> Friend Finder <i class="fas fa-dragon"></i></h1>
           <hr class="my-4" />
           <h3>Answer a few basic questions to find your Stranger Things Character match.</h3>
           <br/>
