Updated read me and fixed a font style on survey page

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,7 +16,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
 <!--Google Fonts-->
-<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Rajdhani&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Roboto+Condensed:300|Rajdhani&display=swap" rel="stylesheet">
 
 <!-- Font Awesome --> 
  <script src="https://kit.fontawesome.com/f0b2e95a6d.js" crossorigin="anonymous"></script>
@@ -161,7 +161,8 @@
     <footer>
         <div class="container">
             <p><a href="/api/friends">API Friends List</a> | 
-                <a href="https://github.com/hgowton/FriendFinder">GitHub Repo</a></p>
+                <a href="https://github.com/hgowton/FriendFinder">GitHub Repo</a> | 
+                <a href="/">Home Page</a></p>
             </div>
         </footer>
 
